[tool.poetry]
name = "src"
version = "0.1.0"
description = "run your blueprints on your own infrastructure"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
pygments = "^2.18.0"
fpdf2 = "^2.7.8"
markdown = "^3.6"
arq = "^0.26.0"

[tool.poetry.dependencies.hyko_sdk]
git = "https://github.com/BIGmama-technology/Hyko-sdk.git"
branch = "MNF"


[tool.poetry.dependencies.hyko_toolkit]
git = "https://github.com/BIGmama-technology/Hyko-toolkit.git"
branch = "MNF"



[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "N",  # pep8-naming 
    "D", # docs
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "D100", # docstrings for modules
    "D203", # one blank line before class 
    "D213" # multi line summary second line
]
line-length = 100