[tool.poetry]
name = "src"
version = "0.1.0"
description = "run your blueprints on your own infrastructure"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
pygments = "^2.18.0"
fpdf2 = "^2.7.8"
markdown = "^3.6"
arq = "^0.26.0"
langchain-community = "^0.2.0"
transformers = {extras = ["torch"], version = "^4.41.0"}
sentencepiece = "^0.2.0"
opencv-python = "^4.9.0.80"
torch = "^2.3.0"
torchvision = "^0.18.0"
supervision = "^0.20.0"
cvzone = "^1.6.1"
scikit-learn = "^1.5.0"
langchain = "^0.2.0"
sentence-transformers = "^2.7.0"
faiss-cpu = "^1.8.0"
rank-bm25 = "^0.2.2"
diffusers = "^0.27.2"
pytesseract = "^0.3.10"
surya-ocr = "^0.4.7"
easyocr = "^1.7.1"
ultralytics = "^8.2.19"
fitz = "^0.0.1.dev2"
pymupdf = "^1.24.4"
nltk = "^3.8.1"
pytube = "^15.0.0"
youtube-transcript-api = "^0.6.2"
bs4 = "^0.0.2"
scrapy = "^2.11.2"
nest-asyncio = "^1.6.0"
wikipedia = "^1.4.0"
duckduckgo-search = "^6.1.0"

[tool.poetry.group.toolkit.dependencies.hyko_toolkit]
path = "../toolkit"
develop = true

[tool.poetry.group.sdk.dependencies.hyko_sdk]
path = "../sdk"
develop = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "N",  # pep8-naming 
    "D", # docs
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "D100", # docstrings for modules
    "D203", # one blank line before class 
    "D213" # multi line summary second line
]
line-length = 100